--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/KathulaDeepthilatha/Surprise#readme",
   "devDependencies": {
     "autoprefixer": "^10.4.21",
+    "buffer": "^6.0.3",
     "parcel": "^2.15.4",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.10"
